width spacing between columns fixed

--- a/practice_problems/tables/stylesheet.css
+++ b/practice_problems/tables/stylesheet.css
@@ -52,10 +52,6 @@ h2 {
   margin-left: 40px;
 }
 
-.indent {
-  text-indent: 20px;
-}
-
 h3 {
   margin-top: 2px;
   font-family: Helvetica;
@@ -65,12 +61,26 @@ h3 {
 }
 
 table {
-  border-collapse: collapse;
+  border-spacing: 15px 0px;
 }
 
 th {
-  border-bottom: 1px solid black;
   font-size: 25px;
+  text-align: left;
+  font-weight: normal;
+}
+
+td {
+  text-align: center;
+}
+
+th.menu {
+  border-bottom: 1px solid black;
+  text-align: center;
+}
+
+th.indent {
+  text-indent: 28px;
 }
 
 tr {
